--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'HBD_BE'
 
 include 'api'
+
 include 'core:core-infra-db'
+//include 'core:core-infra-scheduleder'
+
+include 'core:core-domain'
