--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 100
+      minimum-idle: 5
+      connection-timeout: 5000
 
   jpa:
     hibernate:
@@ -15,6 +19,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         show_sql: true
         format_sql: true
+        default_batch_fetch_size: 100
 
   jackson:
     serialization:
@@ -23,3 +28,20 @@ spring:
   sql:
     init:
       mode: always
+
+server:
+  tomcat:
+    threads:
+      max: 200                
+      min-spare: 10          
+
+# Springdoc OpenAPI Configuration
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    groups-order: DESC
+    operationsSorter: method
+    disable-swagger-default-url: true
+    display-request-duration: true
+  api-docs:
+    path: /api-docs
