--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active: local
+
   application:
     name: BOOK_BE
 
@@ -13,8 +16,8 @@ spring:
 server:
   tomcat:
     threads:
-      max: 200                
-      min-spare: 10          
+      max: 200
+      min-spare: 10
 
 # Springdoc OpenAPI Configuration
 springdoc:
