--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,8 +50,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: true
-        format_sql: true
+        show_sql: false
+        format_sql: false
         default_batch_fetch_size: 100
 
 ---
