[ADD] KakaoApiProperties추가 및 kakao_search_url 프로퍼티 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,7 @@ server:
 
 kakao:
   rest-api-key: ${KAKAO_REST_API_KEY}
+  search-url: https://dapi.kakao.com/v3/search/book
 
 # Springdoc OpenAPI Configuration
 springdoc:
