[FIX] 외부 설정 키 prefix를 범용 loader에서 culturalDataLoader로 명확화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,10 +13,10 @@ spring:
     init:
       mode: always
 
-  external:
-    loader:
-      enabled: false
-      batchSize: 10
+external:
+  cultural-data-loader:
+    enabled: false
+    batchSize: 10
 
 server:
   tomcat:
