--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 external:
   cultural-data-loader:
     enabled: false
-    batchSize: 10
+    batchSize: 100
 
 server:
   tomcat:
@@ -67,10 +67,10 @@ spring:
         format_sql: false
         default_batch_fetch_size: 100
 
-  external:
-    loader:
-      enabled: true
-      batchSize: 10
+external:
+  cultural-data-loader:
+    enabled: true
+    batchSize: 100
 
 ---
 spring:
@@ -97,7 +97,7 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
 
-  external:
-    loader:
-      enabled: false
-      batchSize: 10
+external:
+  cultural-data-loader:
+    enabled: false
+    batchSize: 100
