--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,6 +67,10 @@ spring:
         format_sql: false
         default_batch_fetch_size: 100
 
+  batch:
+    jdbc:
+      initialize-schema: embedded
+
   external:
     loader:
       enabled: true
