--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,24 +48,35 @@ spring:
   config:
     activate:
       on-profile: local
+
   datasource:
-    url: jdbc:mysql://localhost:3306/HBD?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: password
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:oracle:thin:@//localhost:1521/XEPDB1  # // 추가
+    username: bookapp
+    password: password123
+    driver-class-name: oracle.jdbc.OracleDriver
     hikari:
       maximum-pool-size: 100
       minimum-idle: 5
       connection-timeout: 5000
+
   jpa:
-    hibernate:
-      ddl-auto: create
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: false
-        format_sql: false
-        default_batch_fetch_size: 100
+        dialect: org.hibernate.dialect.OracleDialect
+        format_sql: true
+        show_sql: true
+        hbm2ddl:
+          auto: create-drop
+        jdbc:
+          time_zone: UTC
+          lob:
+            non_contextual_creation: true
+    show-sql: true
+    hibernate:
+      ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
   batch:
     jdbc:
       initialize-schema: embedded
