--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,8 +41,9 @@ national-library:
   url: ${NATIONAL_LIBRARY_API_URL:https://www.nl.go.kr/seoji/SearchApi.do}
   key: ${NATIONAL_LIBRARY_API_KEY}
 
-# Sentry Configuration
+# Sentry Configuration (조건부)
 sentry:
+  enabled: false
   dsn: ${SENTRY_DSN:}
   environment: ${SPRING_PROFILES_ACTIVE:local}
   server-name: book-be
@@ -69,7 +70,7 @@ spring:
   config:
     activate:
       on-profile: local
-  
+
   datasource:
     #    url: jdbc:mysql://localhost:3306/HBD?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     #    username: root
@@ -83,7 +84,7 @@ spring:
       maximum-pool-size: 100
       minimum-idle: 5
       connection-timeout: 5000
-  
+
   jpa:
     hibernate:
       ddl-auto: create
@@ -94,7 +95,7 @@ spring:
         show_sql: false
         format_sql: false
         default_batch_fetch_size: 100
-  
+
   batch:
     jdbc:
       initialize-schema: embedded
@@ -108,6 +109,7 @@ database:
   platform: oracle
 
 sentry:
+  enabled: false
   debug: true
   traces-sample-rate: 0.1
   tags:
@@ -149,6 +151,7 @@ database:
   platform: oracle
 
 sentry:
+  enabled: false
   debug: false
   traces-sample-rate: 0.5
   tags:
